# erpnext-dev-mcp

./: .env.example  .gitignore  Dockerfile  README.md  batch_processor.py  concise_status_report.txt  concise_status_report_20260420_102243.txt  current_status_report.txt  docker-compose.yml  erpnext_urls.json  framework_urls.json  framework_urls_init.json  init_framework_urls.py  pyproject.toml  status_report_20260419_015602.txt  status_report_20260419_143114.txt  status_report_20260420_221656.txt  status_report_detailed.txt  xu_zong_cronjob_report.txt  xu_zong_status_report.txt  xu_zong_status_report_20260419_071323.txt  xu_zong_status_report_20260419_085824.txt  xu_zong_status_report_20260419_170655.txt  xu_zong_status_report_20260419_172127.txt  xu_zong_status_report_20260420_102243.txt  xu_zong_status_report_20260420_154613.txt  xu_zong_status_report_20260420_175101.txt  xu_zong_status_report_concise.txt
.claude/: settings.local.json
doc_cn/: 100_capacity_planning.html  101_capacity_planning_based_on_production_order.html  102_centavo_being_printed_in_words_for_usd.html  103_change_password.html  104_change_valuation_method.html  105_changing_parent_account.html  106_changing_the_properties_of_a_field_based_on_role.html  107_chart_of_accounts.html  108_chart_of_accounts_importer.html  109_check_link_between_documents.html  10_accounting_of_inventory_stock.html  110_cheque_print_template.html  111_client_scripts.html  111_comparison_of_bom_routing.html  112_close_sales_order.html  113_closing_accounting_books_in_erpnext.html  114_closing_stock_balance.html  (+485 more)
(+949 files in other folders)
